--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 						</li> -->
 						<li class="nav-item"><a class="nav-link" href="teachers.html">Teachers</a></li>
 						<!-- <li class="nav-item"><a class="nav-link" href="pricing.html">Pricing</a></li> -->
-						<li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+						<li class="nav-item"><a class="nav-link" href="contact.php">Contact</a></li>
 					</ul>
 					<!-- <ul class="nav navbar-nav navbar-right">
                         <li><a class="hover-btn-new log orange" href="#" data-toggle="modal" data-target="#login"><span>Book Now</span></a></li>
