--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
  
      <!-- Site Metas -->
-    <title>SmartEDU - Education Responsive HTML5 Template</title>  
+    <title>About us</title>  
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -81,7 +81,7 @@
 						</li> -->
 						<li class="nav-item"><a class="nav-link" href="teachers.html">Teachers</a></li>
 						<!-- <li class="nav-item"><a class="nav-link" href="pricing.html">Pricing</a></li> -->
-						<li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+						<li class="nav-item"><a class="nav-link" href="contact.php">Contact</a></li>
 					</ul>
 					
 				</div>
